cmake_minimum_required(VERSION 3.10)
project(FEMM C CXX)

option(BUILD_MANUAL "Build the manual" OFF)
option(SKIP_belasolv "Skip building belasolv" OFF)
option(SKIP_csolv "Skip building csolv" OFF)
option(SKIP_liblua "Skip building liblua" OFF)
option(SKIP_ResizableLib "Skip building ResizableLib" OFF)
option(SKIP_femm "Skip building femm" OFF)
option(SKIP_femmplot "Skip building femmplot" OFF)
option(SKIP_fkn "Skip building fkn" OFF)
option(SKIP_hsolv "Skip building hsolv" OFF)
option(SKIP_scifemm "Skip building scifemm" OFF)
option(SKIP_triangle "Skip building triangle" OFF)

set(INSTALL_BIN_DIR  "${CMAKE_SOURCE_DIR}/bin" CACHE PATH "Path where exe will be installed")

if(BUILD_MANUAL)
  add_subdirectory(manual)
endif()

if (NOT SKIP_belasolv)
  add_subdirectory(belasolv)
endif()
if (NOT SKIP_csolv)
  add_subdirectory(csolv)
endif()
if (NOT SKIP_liblua)
  add_subdirectory(liblua)
endif()
if (NOT SKIP_ResizableLib)
  add_subdirectory(ResizableLib)
endif()
if (NOT SKIP_femm)
  add_subdirectory(femm)
endif()
if (NOT SKIP_femmplot)
  add_subdirectory(femmplot)
endif()
if (NOT SKIP_fkn)
  add_subdirectory(fkn)
endif()
if (NOT SKIP_hsolv)
  add_subdirectory(hsolv)
endif()
if (NOT SKIP_scifemm)
  add_subdirectory(scifemm)
endif()
if(NOT SKIP_triangle)
  if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    add_subdirectory(triangle64)
  elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
    add_subdirectory(triangle)
  endif()
endif()
