cmake_minimum_required(VERSION 3.10)
project(femm C CXX)

set(INSTALL_BIN_DIR  "${CMAKE_SOURCE_DIR}" CACHE PATH "Path where exe will be installed")

find_package(MFC REQUIRED)
set(CMAKE_MFC_FLAG 2)
add_definitions(-D_WIN32_WINNT=0x0501)

if(MSVC)
  set(ADDITIONAL_CXX_FLAGS "/wd4311 /wd4312 /wd4477")
  set(ADDITIONAL_C_FLAGS "/wd4311 /wd4312 /wd4477")
  set(CMAKE_CXX_FLAGS "${ADDITIONAL_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
  set(CMAKE_C_FLAGS "${ADDITIONAL_C_FLAGS} ${CMAKE_C_FLAGS}")
endif()

set(femm_SOURCES
  ActiveFEMM.h
  ArcDlg.h
  backup_resource.h
  bd_BdryDlg.h
  bd_CircProp.h
  bd_libdlg.h
  bd_MatDlg.h
  bd_NodeProp.h
  bd_nosebl.h
  bd_OpArcSegDlg.h
  bd_OpBlkDlg.h
  bd_OpNodeDlg.h
  bd_OpSegDlg.h
  bd_Pref.h
  bd_probdlg.h
  bd_PtProp.h
  BdryDlg.h
  beladrawDoc.h
  beladrawView.h
  belaviewDoc.h
  belaviewView.h
  BendContourDlg.h
  BHData.h
  BHDatafile.h
  bhplot.h
  BlockInt.h
  bv_BlockInt.h
  bv_CircDlg.h
  bv_CplotDlg2.h
  bv_DPlotDlg2.h
  bv_LIntDlg.h
  bv_Pref.h
  bv_problem.h
  bv_VPlotDlg.h
  bv_XYPlotDlg.h
  cd_BdryDlg.h
  cd_CircProp.h
  cd_libdlg.h
  cd_MatDlg.h
  cd_NodeProp.h
  cd_nosebl.h
  cd_OpArcSegDlg.h
  cd_OpBlkDlg.h
  cd_OpNodeDlg.h
  cd_OpSegDlg.h
  CD_PREF.H
  cd_probdlg.h
  cd_PtProp.h
  CDRAWDOC.H
  cdrawView.h
  ChildFrm.h
  CircDlg.h
  CircProp.h
  COMPLEX.H
  CopyDlg.h
  CPlotDlg.h
  CplotDlg2.h
  cv_BlockInt.h
  cv_CircDlg.h
  cv_CplotDlg2.h
  cv_DPlotDlg2.h
  cv_LIntDlg.h
  CV_PREF.H
  cv_problem.h
  cv_VPlotDlg.h
  cv_XYPlotDlg.h
  CVIEWDOC.H
  cviewView.h
  DXFImport.h
  EnterPt.h
  ExteriorProps.h
  fe_libdlg.h
  femm.h
  femmDoc.h
  FemmeDoc.h
  FemmeView.h
  femmplotDoc.h
  femmplotView.h
  FemmviewDoc.h
  FemmviewView.h
  fullmatrix.h
  GapIntegral.h
  GapPlotDlg.h
  GeneralPrefs.h
  GRIDDLG.H
  GridMod.h
  GroupNumber.h
  hd_BdryDlg.h
  hd_CircProp.h
  hd_libdlg.h
  hd_MatDlg.h
  hd_NodeProp.h
  hd_nosebl.h
  hd_OpArcSegDlg.h
  hd_OpBlkDlg.h
  hd_OpNodeDlg.h
  hd_OpSegDlg.h
  HD_PREF.H
  hd_probdlg.h
  hd_PtProp.h
  HDRAWDOC.H
  hdrawView.h
  hv_BlockInt.h
  hv_CircDlg.h
  hv_CplotDlg2.h
  hv_DPlotDlg2.h
  hv_LIntDlg.h
  HV_PREF.H
  hv_problem.h
  hv_VPlotDlg.h
  hv_XYPlotDlg.h
  hviewDoc.h
  hviewView.h
  KbdZoom.h
  KCurve.h
  LibFolderInfo.h
  LIntDlg.h
  LUA.H
  LuaConsoleDlg.h
  luaDDX.h
  luadebug.h
  LuaEdit.h
  MainFrm.h
  MakeABCDlg.h
  MaskProgress.h
  MatDlg.h
  mathlink.h
  MDITabs.h
  MirrorDlg.h
  MyCommandLineInfo.h
  MyMsgBox.h
  MyRecentFileList.h
  MyTabCtrl.h
  NewDocDlg.h
  NodeProp.h
  NOSEBL.H
  OpArcSegDlg.h
  OpBlkDlg.h
  OpGrp.h
  OpNodeDlg.h
  OpSegDlg.h
  OutBox.h
  Pref.h
  Preferences.h
  probdlg.h
  Problem.h
  PromptBox.h
  PtProp.h
  ResizableDialog.h
  ResizableFormView.h
  ResizableFrame.h
  ResizableGrip.h
  ResizableLayout.h
  ResizableMDIChild.h
  ResizableMDIFrame.h
  ResizableMinMax.h
  ResizableMsgSupport.h
  ResizablePage.h
  ResizablePageEx.h
  ResizableSheet.h
  ResizableSheetEx.h
  ResizableState.h
  resource.h
  ScaleDlg.h
  spars.h
  StdAfx.h
  TKDatafile.h
  viewpref.h
  VPlotDlg.h
  Xyplot.h
  XYPlotDlg.h
  ActiveFEMM.cpp
  ArcDlg.cpp
  bd_BdryDlg.cpp
  bd_CircProp.cpp
  bd_libdlg.cpp
  bd_MatDlg.cpp
  bd_movecopy.cpp
  bd_NodeProp.cpp
  bd_nosebl.cpp
  bd_OpArcSegDlg.cpp
  bd_OpBlkDlg.cpp
  bd_OpNodeDlg.cpp
  bd_OpSegDlg.cpp
  bd_Pref.cpp
  bd_probdlg.cpp
  bd_PtProp.cpp
  bd_writepoly.cpp
  BdryDlg.cpp
  beladrawDoc.cpp
  beladrawLua.cpp
  beladrawView.cpp
  belaviewDoc.cpp
  belaviewLua.cpp
  belaviewView.cpp
  BendContourDlg.cpp
  BHData.cpp
  BHDatafile.cpp
  bhplot.cpp
  BlockInt.cpp
  bv_BlockInt.cpp
  bv_CircDlg.cpp
  bv_CplotDlg2.cpp
  bv_DPlotDlg2.cpp
  bv_LIntDlg.cpp
  bv_makemask.cpp
  bv_Pref.cpp
  bv_problem.cpp
  bv_VPlotDlg.cpp
  bv_XYPlotDlg.cpp
  cd_BdryDlg.cpp
  cd_CircProp.cpp
  cd_libdlg.cpp
  cd_MatDlg.cpp
  cd_movecopy.cpp
  cd_NodeProp.cpp
  cd_nosebl.cpp
  cd_OpArcSegDlg.cpp
  cd_OpBlkDlg.cpp
  cd_OpNodeDlg.cpp
  cd_OpSegDlg.cpp
  CD_PREF.CPP
  cd_probdlg.cpp
  cd_PtProp.cpp
  cd_writepoly.cpp
  CDRAWDOC.CPP
  CDRAWLUA.CPP
  cdrawView.cpp
  ChildFrm.cpp
  CircDlg.cpp
  CircProp.cpp
  CopyDlg.cpp
  CPlotDlg.cpp
  CplotDlg2.cpp
  cv_BlockInt.cpp
  cv_CircDlg.cpp
  cv_CplotDlg2.cpp
  cv_DPlotDlg2.cpp
  cv_LIntDlg.cpp
  cv_makemask.cpp
  CV_PREF.CPP
  cv_problem.cpp
  cv_VPlotDlg.cpp
  cv_XYPlotDlg.cpp
  CVIEWDOC.CPP
  CVIEWLUA.CPP
  cviewView.cpp
  DXFImport.cpp
  EnterPt.cpp
  ExteriorProps.cpp
  fe_libdlg.cpp
  femm.cpp
  femmDoc.cpp
  FemmeDoc.cpp
  femmeLua.cpp
  FemmeView.cpp
  femmplotDoc.cpp
  femmplotView.cpp
  FemmviewDoc.cpp
  femmviewLua.cpp
  FemmviewView.cpp
  fullmatrix.cpp
  GapIntegral.cpp
  GapPlotDlg.cpp
  GeneralPrefs.cpp
  GRIDDLG.CPP
  GridMod.cpp
  GroupNumber.cpp
  hd_BdryDlg.cpp
  hd_CircProp.cpp
  hd_libdlg.cpp
  hd_MatDlg.cpp
  hd_movecopy.cpp
  hd_NodeProp.cpp
  hd_nosebl.cpp
  hd_OpArcSegDlg.cpp
  hd_OpBlkDlg.cpp
  hd_OpNodeDlg.cpp
  hd_OpSegDlg.cpp
  HD_PREF.CPP
  hd_probdlg.cpp
  hd_PtProp.cpp
  hd_writepoly.cpp
  HDRAWDOC.CPP
  HDRAWLUA.CPP
  hdrawView.cpp
  hv_BlockInt.cpp
  hv_CircDlg.cpp
  hv_CplotDlg2.cpp
  hv_DPlotDlg2.cpp
  hv_LIntDlg.cpp
  HV_PREF.CPP
  hv_problem.cpp
  hv_VPlotDlg.cpp
  hv_XYPlotDlg.cpp
  hviewDoc.cpp
  hviewLua.cpp
  hviewView.cpp
  KbdZoom.cpp
  KCurve.cpp
  LibFolderInfo.cpp
  LIntDlg.cpp
  LuaConsoleDlg.cpp
  luaDDX.cpp
  LuaEdit.cpp
  MainFrm.cpp
  MakeABCDlg.cpp
  makemask.cpp
  MaskProgress.cpp
  MatDlg.cpp
  MDITabs.cpp
  MirrorDlg.cpp
  MOVECOPY.CPP
  MyCommandLineInfo.cpp
  MyMsgBox.cpp
  MyRecentFileList.cpp
  MyTabCtrl.cpp
  NewDocDlg.cpp
  NodeProp.cpp
  NOSEBL.CPP
  OpArcSegDlg.cpp
  OpBlkDlg.cpp
  OpGrp.cpp
  OpNodeDlg.cpp
  OpSegDlg.cpp
  OutBox.cpp
  Pref.cpp
  Preferences.cpp
  probdlg.cpp
  Problem.cpp
  PromptBox.cpp
  PtProp.cpp
  ScaleDlg.cpp
  spars.cpp
  StdAfx.cpp
  TKDatafile.cpp
  viewpref.cpp
  VPlotDlg.cpp
  writepoly.cpp
  Xyplot.cpp
  XYPlotDlg.cpp
  femm.rc
)

add_executable(femm WIN32 ${femm_SOURCES})
target_include_directories(femm PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(femm liblua ResizableLib)
install(TARGETS femm DESTINATION "${INSTALL_BIN_DIR}")
